--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -33,7 +33,7 @@ jobs:
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: finalCaseStudy
           environment_name: Finalcasestudy-env
-          version_label: "the-simple-engineer-deployment-${{ steps.format-time.outputs.replaced }}"
-          region: us-east-1
+          version_label: "Final-Case-Study-${{ steps.format-time.outputs.replaced }}"
+          region: ap-south-1
           deployment_package: deploy.zip
     
