--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -34,6 +34,6 @@ jobs:
           application_name: finalCaseStudy
           environment_name: Finalcasestudy-env
           version_label: "Final-Case-Study-${{ steps.format-time.outputs.replaced }}"
-          region: ap-south-1
+          region: us-east-1
           deployment_package: deploy.zip
     
