--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -31,9 +31,9 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: finalCaseStudy
-          environment_name: Finalcasestudy-env
+          application_name: casestudy
+          environment_name: Casestudy-env
           version_label: "Final-Case-Study-${{ steps.format-time.outputs.replaced }}"
-          region: us-east-1
+          region: ap-south-1
           deployment_package: deploy.zip
     
