--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,9 +2,9 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 16
+      nodejs: 14
     commands:
-      - echo Installing Mocha...
+      - echo Installing dependencies
       - npm install -g mocha
   pre_build:
     commands:
@@ -13,15 +13,12 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - echo Compiling the Node.js code
       - npm run test
+      - npm run-script build
   post_build:
     commands:
       - echo Build completed on `date`
-# Include only the files required for your application to run.
+
 artifacts:
   files:
-    - src/index.js
-    - src/app.js
-    - package.json
-    - node_modules/**/*
+    - build/**/**/*
